# dream-validate

./: LICENSE.md  README.md  dream-validate.opam  dune-project
lib/: dream_validate.ml  dream_validate.mli  dune
ppx/: dune  ppx_dream_validate.ml
test/: dune  test.ml  test_ppx.ml
